unpackaged/main/default/objects/Contact/fields/Age_Plan_to_Retire__c.field-meta.xml
<CustomField>
    <fullName>Age_Plan_to_Retire__c</fullName>
    <label>Age Plan to Retire</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>