unpackaged/main/default/objects/Contact/fields/Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_ID__c</fullName>
    <externalId>true</externalId>
    <label>Agency ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>