unpackaged/main/default/objects/Contact/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Agent ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>