unpackaged/main/default/objects/Contact/fields/Agent_LOB__c.field-meta.xml
<CustomField>
    <fullName>Agent_LOB__c</fullName>
    <description>Line of Business of the Agent</description>
    <label>Agent LOB</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_of_Business</valueSetName>
    </valueSet>
</CustomField>