unpackaged/main/default/objects/Contact/fields/Business_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Type__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Group Type</label>
    <type>Text</type>
</CustomField>