unpackaged/main/default/objects/Contact/fields/Decile_Model_1__c.field-meta.xml
<CustomField>
    <fullName>Decile_Model_1__c</fullName>
    <description>Coming over from the Unite Us file</description>
    <label>Decile Model 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>