unpackaged/main/default/objects/Contact/fields/Email_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Date__c</fullName>
    <label>Email Opt In Date</label>
    <type>Date</type>
</CustomField>