unpackaged/main/default/objects/Contact/fields/Health_Plan_Updates__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Plan Updates</label>
    <type>Checkbox</type>
</CustomField>