unpackaged/main/default/objects/Contact/fields/Health_Programs_Available_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Health_Programs_Available_to_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Programs Available to Me</label>
    <type>Checkbox</type>
</CustomField>