unpackaged/main/default/objects/Contact/fields/Kit_Code__c.field-meta.xml
<CustomField>
    <fullName>Kit_Code__c</fullName>
    <label>Kit Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>