unpackaged/main/default/objects/Contact/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>Provides name of Account LOB to Marketing Cloud so Member data can be used</description>
    <formula>IF(IsPersonAccount=TRUE,TEXT(Account.LOB__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB</label>
    <type>Text</type>
</CustomField>