unpackaged/main/default/objects/Contact/fields/Mail_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Mail_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Opt In</label>
    <type>Checkbox</type>
</CustomField>