unpackaged/main/default/objects/Contact/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>Provides Value of Account.Market_Segment to Marketing Cloud so Member data can be used</description>
    <formula>IF(IsPersonAccount=TRUE,TEXT(Account.Market_segment__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>