unpackaged/main/default/objects/Contact/fields/Marketing_Snooze_Preference__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Snooze_Preference__c</fullName>
    <label>Marketing Snooze Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>