unpackaged/main/default/objects/Contact/fields/Medicare_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Advantage__c</fullName>
    <label>Medicare Advantage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Wisconsin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>