unpackaged/main/default/objects/Contact/fields/Method_to_Receive_Guide__c.field-meta.xml
<CustomField>
    <fullName>Method_to_Receive_Guide__c</fullName>
    <description>Marketing cloud preference center field</description>
    <label>Method to Receive Guide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>