unpackaged/main/default/objects/Contact/fields/Migration_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Migration Source Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>