unpackaged/main/default/objects/Contact/fields/Months_Until_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Months_Until_Retirement__c</fullName>
    <label>Months Until Retirement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>