unpackaged/main/default/objects/Contact/fields/MPT_Username__c.field-meta.xml
<CustomField>
    <fullName>MPT_Username__c</fullName>
    <label>MPT Username</label>
    <length>150</length>
    <type>Text</type>
</CustomField>