unpackaged/main/default/objects/Contact/fields/MyChart_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>MyChart_Signup_Date__c</fullName>
    <label>MyChart Signup Date</label>
    <type>Date</type>
</CustomField>