unpackaged/main/default/objects/Contact/fields/NPN__c.field-meta.xml
<CustomField>
    <fullName>NPN__c</fullName>
    <externalId>true</externalId>
    <label>NPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>