unpackaged/main/default/objects/Contact/fields/Original_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Enrollment_Date__c</fullName>
    <label>Original Enrollment Date</label>
    <type>Date</type>
</CustomField>