unpackaged/main/default/objects/Contact/fields/Primary_LOB__c.field-meta.xml
<CustomField>
    <fullName>Primary_LOB__c</fullName>
    <label>Primary LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Large Group</fullName>
            </value>
            <value>
                <fullName>Small Group</fullName>
            </value>
            <value>
                <fullName>Badgercare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage D-SNP</fullName>
            </value>
            <value>
                <fullName>Medicare Supplement</fullName>
            </value>
            <value>
                <fullName>Self Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>