unpackaged/main/default/objects/Contact/fields/Request_Contact__c.field-meta.xml
<CustomField>
    <fullName>Request_Contact__c</fullName>
    <label>Request Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>