unpackaged/main/default/objects/Contact/fields/Risk_Pool__c.field-meta.xml
<CustomField>
    <fullName>Risk_Pool__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Pool</label>
    <type>Text</type>
</CustomField>