unpackaged/main/default/objects/Contact/fields/Secondary_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Lead_Source__c</fullName>
    <description>Mapped when a lead gets converted</description>
    <label>Secondary Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google/Web</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Word of Mouth/Relative/Friend</fullName>
            </value>
            <value>
                <fullName>Newspaper/Free-Standing Insert/Magazine</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Billboard/Bus/Transit</fullName>
            </value>
            <value>
                <fullName>Community Event</fullName>
            </value>
            <value>
                <fullName>qb.com</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>