unpackaged/main/default/objects/Contact/fields/Snooze_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Snooze_End_Date__c</fullName>
    <label>Snooze End Date</label>
    <type>Date</type>
</CustomField>