unpackaged/main/default/objects/Contact/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>for Snowflake integration of Group data</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>