unpackaged/main/default/objects/Contact/recordTypes/TestRec.recordType-meta.xml
<RecordType>
    <fullName>TestRec</fullName>
    <active>true</active>
    <label>TestRec</label>
</RecordType>